[package]
name = "pwasm-api"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]

[dependencies]
# pwasm-ethereum = "*"
lazy_static = "*"
serde = "*"
either = "*"
tiny-keccak = "*"
bincode = "*"
parity-hash = "*"
bigint = "4.3.0"
pwasm-abi = "*"

[patch.crates-io]
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc.git" }

[features]
default = ["std"]
std = []
