[package]
name = "fleetwood"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]

[dependencies]
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
either = "1.5"
tiny-keccak = "1.4"
bincode = "1.0"
metrohash = "1.0"
parity-hash = { version = "1.2", features = ["serialize"] }
bigint = { version = "4.3.0", features = ["serialize"] }
pwasm-abi = { version = "0.1", features = ["std"] }

[features]
default = []
std = []
